# server/src/main/java/com/tailoredshapes/laser/Repository.java
@@ -1,0 +1,16 @@
+package com.tailoredshapes.laser;
+
+import java.time.Instant;
+import java.util.List;
+
+public interface  Repository<I, T> {
+
+    T create(T form);
+    T read(I id);
+
+    List<T> read();
+
+    T update(I id, T form);
+
+    T delete(I id);
+}
